# ai

./: README.md  pyproject.toml
src/ai/: cli.py  client.py  config.py  tools.py
