[project]
name = "ai"
version = "0.1.0"
description = "AI CLI — query LLMs via OpenRouter from your terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "exa-py>=1.0",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
ai = "ai.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
